Ad Unit: Fix max-width and input wrapping

--- a/src/blocks/ad-unit/editor.scss
+++ b/src/blocks/ad-unit/editor.scss
@@ -1,5 +1,6 @@
 .newspack-ads-ad-unit {
 	margin: 0 auto;
+	max-width: 100%;
 
 	.newspack-ads-ad-unit__icon {
 		align-items: center;
@@ -30,7 +31,13 @@
 	}
 
 	.components-base-control__field {
+		display: flex;
+		flex-wrap: wrap;
 		margin: 0;
+
+		> * {
+			flex: 1 1 100%;
+		}
 	}
 
 	.components-placeholder {
